# wrt_at

./: .gitignore  .pre-commit-config.yaml  README.md
vehicle_price_prediction/: README.md  pyproject.toml
vehicle_price_prediction/vehicle_price_prediction/data/: at_vehicle_data.csv  at_vehicle_data_clean.csv
vehicle_price_prediction/vehicle_price_prediction/src/eda/: eda.ipynb  test.ipynb
vehicle_price_prediction/vehicle_price_prediction/src/model/: model.ipynb  model_metrics.ipynb
