[tool.poetry]
name = "vehicle-price-prediction"
version = "0.1.0"
description = ""
authors = ["wesley.raynbirdtilbury <wesley.raynbird-tilbury@nbrown.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
nbqa = "^1.9.0"
pylint = "^3.3.1"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
